# SLIM-Invoicing-Program

./: .gitignore  README.md
V4 - Python Port/: .env.template  .gitignore  README.md  claude.md  create_test_submission.py  out.csv  pyproject.toml  requirements.txt  seed_db.py
V4 - Python Port/infrastructure/: database.py
V4 - Python Port/samples/: 051526 ACME ENV LABS Results [2026-05-16].xlsx
V4 - Python Port/slim/: app.py  cli.py
V4 - Python Port/slim/domain/analysis/: __init__.py  analysis.py  analysis_cache.py  analysis_repository.py  analysis_service.py
V4 - Python Port/slim/domain/chemical/: __init__.py  chemical.py  chemical_cache.py  chemical_repository.py  chemical_service.py
V4 - Python Port/slim/domain/customer/: __init__.py  customer.py  customer_cache.py  customer_repository.py  customer_service.py
V4 - Python Port/slim/domain/element/: element.py  element_cache.py  element_repository.py  element_service.py
V4 - Python Port/slim/domain/quote/: enums.py  quote.py  quote_cache.py  quote_line_item.py  quote_price.py  quote_repository.py  quote_service.py
V4 - Python Port/slim/domain/sales_order/: __init__.py  sales_order.py  sales_order_service.py  (+2 more)
V4 - Python Port/slim/pipeline/: __init__.py  invoice_file_validator.py  line_item_data.py  priced_group.py  sales_order_builder.py  sales_order_csv_writer.py  sales_order_line_item_builder.py  sales_order_pricing_engine.py  submission_loader.py
V4 - Python Port/tests/pipeline/: test_builders.py  test_csv_writer.py  test_invoice_file_validator.py  test_pricing_engine.py  test_submission_loader.py
(+146 files in other folders)
