[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slim"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "click>=8.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9",
]

[project.scripts]
slim = "slim.cli:cli"

[tool.setuptools.packages.find]
include = ["slim*", "infrastructure*"]

[tool.pytest.ini_options]
pythonpath = ["."]
